# caduceus-distill

./: .gitignore  .pre-commit-config.yaml  README.md  caduceus_inf.py  main.py  pyproject.toml
.github/workflows/: ci.yaml  pre-commit.yaml
caduceus_distill/: distill.py  hg38_dataset.py  nt_eval.py  nt_eval_print.py  teacher_inference.py  utils.py
caduceus_distill/tests/: caduceus_distillation_test.py
caduceus_distill/utils/: nt_eval_print.py  utils.py
docs/: notebooks.md
src/: caduceus_distillation.py  caduceus_inf.py  caduceus_nt_eval.py  config.yaml  hg38_dataset.py  utils.py
src/tests/: caduceus_distillation_test.py
