[project]
name = "caduceus-distill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy<2",
    "pyfaidx>=0.8.1.4",
    "torch==2.2.0",
    "transformers==4.38.1",
    "xarray>=2025.6.1",
    "zarr>=3.0.8",
    "setuptools>=80.9.0",
    "pynvml>=12.0.0",
]

[project.optional-dependencies]
mamba = ["mamba-ssm==1.2.0.post1"]

[tool.uv]
no-build-isolation-package = ["mamba-ssm"]

[[tool.uv.dependency-metadata]]
name = "mamba-ssm"
version = "1.2.0.post1"
# TODO: do I need to list all?
# https://docs.astral.sh/uv/concepts/projects/config/#build-isolation
requires-dist = ["torch", "einops"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
]
