[project]
name = "caduceus-distill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy<2",
    "pyfaidx>=0.8.1.4",
    "torch==2.2.0",
    "transformers==4.38.1",
    "xarray>=2025.6.1",
    "zarr>=3.0.8",
    "setuptools>=80.9.0",
    "pynvml>=12.0.0",
    "lightning>=2.5.1.post0",
    "wandb>=0.20.1",
]

[project.optional-dependencies]
mamba = ["mamba-ssm==1.2.0.post1"]

[tool.uv]
no-build-isolation-package = ["mamba-ssm"]

[[tool.uv.dependency-metadata]]
name = "mamba-ssm"
version = "1.2.0.post1"
# TODO: do I need to list all?
# https://docs.astral.sh/uv/concepts/projects/config/#build-isolation
requires-dist = ["torch", "einops"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "pip>=25.1.1",
    "pre-commit>=4.2.0",
    "ruff>=0.11.13",
]

#
# Ruff configuration
#

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
ignore = [
    "E402",  # ignore import-at-top-of-file violations
    "E501",  # ignore line-length violations
    "F811",  # ignore redefinition of a function
    "B019",  # ignore functools cache/lru_cache
    "UP030", # allow explicit positional string formatting
]
select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "C90", # mccabe
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "W",   # pycode warnings
]

[tool.ruff.lint.mccabe]
max-complexity = 20

#
# Pytest configuration
#

[tool.pytest.ini_options]
addopts = """--strict-config --strict-markers \
    --durations=5"""
norecursedirs = ".git .venv .local"

#
# Mypy configuration
#

[tool.mypy]
python_version = "3.12"
strict = true
pretty = true
show_error_context = true
warn_unreachable = true
implicit_reexport = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = ["*.tests.*"]
disallow_incomplete_defs = false
disallow_untyped_defs = false
disallow_untyped_decorators = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = [
    "pyfaidx.*",
    "pynvml.*",
    "transformers.*",
]
ignore_missing_imports = true
